finally fix clipping issues THANK YOU MYSELF

--- a/spot-web/src/app/components/main/comments/comment/comment.component.scss
+++ b/spot-web/src/app/components/main/comments/comment/comment.component.scss
@@ -111,29 +111,23 @@ img {
 }
 
 .dropdown {
-  cursor: pointer;
-  margin-left: auto;
   position: relative;
-  width: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  visibility: hidden;
-  &:hover {
-    @extend .highlight;
-  }
 }
 
-.comment:hover .dropdown {
+.comment:hover .icon-size {
   visibility: visible;
 }
 
 .dropdown-content {
   display: none;
+  cursor: pointer;
   position: absolute;
   background-color: #f1f1f1;
   min-width: 50px;
-  top: 20px;
+  top: 5px;
   right: 0;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -153,7 +147,12 @@ img {
 }
 
 .icon-size {
+  cursor: pointer;
+  visibility: hidden;
   font-size: 20px;
+  &:hover {
+    @extend .highlight;
+  }
 }
 
 // Add reply form
