--- a/spot-web/src/app/components/main/home/home.component.scss
+++ b/spot-web/src/app/components/main/home/home.component.scss
@@ -35,6 +35,7 @@ spot-main-nav {
   left: 0;
   width: 100%;
   height: 60px;
+  z-index: 999;
 }
 
 .locationToggle {
