--- a/spot-web/src/app/components/main/post/post.component.scss
+++ b/spot-web/src/app/components/main/post/post.component.scss
@@ -118,16 +118,10 @@ img {
 }
 
 .dropdown {
-  cursor: pointer;
-  margin-left: auto;
   position: relative;
-  width: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  &:hover {
-    @extend .highlight;
-  }
 }
 
 .dropdown-content {
@@ -135,13 +129,14 @@ img {
   position: absolute;
   background-color: #f1f1f1;
   min-width: 50px;
-  top: 20px;
+  top: 5px;
   right: 0;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content .button {
+  cursor: pointer;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -153,5 +148,9 @@ img {
 .show {display:block;}
 
 .icon-size {
+  cursor: pointer;
   font-size: 20px;
+  &:hover {
+    @extend .highlight;
+  }
 }
